syntax = "proto3";
option java_package = "com.slimanigames.stubs";

service GameService{
  rpc session(stream request) returns(stream response);
}

message request{
  string userName = 1;
  int32 guessedNumber = 2;
  RequestType requestType = 3;
}

message response{
  string serverResponse = 1;
  ResponseType responseType = 2;
}

enum RequestType{
  NEW_USER = 0;
  GUESSING_NUMBER = 1;
}

enum ResponseType{
  WELCOME = 0;
  GAME_IS_OVER = 1;
  YOU_MISSED_THE_NUMBER = 2;
  YOU_WIN = 3;
}

message Empty{}